# actiontesting

.github/workflows/: multiple_jobs.yml  simple_action.yml
multiple_jobs/: CMakeLists.txt  main.cxx
multiple_jobs/lib_000000/: CMakeLists.txt  class_000000.cxx  class_000001.cxx  class_000002.cxx  class_000003.cxx  class_000004.cxx  lib_000000.hxx
multiple_jobs/lib_000001/: CMakeLists.txt  class_000005.cxx  class_000006.cxx  class_000007.cxx  class_000008.cxx  class_000009.cxx  lib_000001.hxx
multiple_jobs/lib_000002/: CMakeLists.txt  class_000010.cxx  class_000011.cxx  class_000012.cxx  class_000013.cxx  class_000014.cxx  lib_000002.hxx
multiple_jobs/lib_000003/: CMakeLists.txt  class_000015.cxx  class_000016.cxx  class_000017.cxx  class_000018.cxx  class_000019.cxx  lib_000003.hxx
multiple_jobs/lib_000004/: CMakeLists.txt  class_000020.cxx  class_000021.cxx  class_000022.cxx  class_000023.cxx  class_000024.cxx  lib_000004.hxx
simple_action/: CMakeLists.txt  main.cpp
simple_action/lib/: CMakeLists.txt  sayhello.cpp  sayhello.h
